--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -443,7 +443,7 @@ header{
     }
 
     .project-container #project-2{
-        background-image: url('../images/projects/password-generator.webp');
+        background-image: url('../images/projects/Screenshot\ 2024-08-12\ 212301.webp');
     }
 
     .project-container #project-3{
